# EdgePulse

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Dockerfile.build  LICENSE  README.md  conanfile.py
src/: main.cpp
src/core/: Exceptions.hpp  Logger.cpp  Logger.hpp
src/domain/: ITelemetryRepository.hpp  TelemetryRecord.hpp
src/persistence/: SQLiteTelemetryRepository.cpp  SQLiteTelemetryRepository.hpp
tests/: test_exceptions.cpp  test_persistence.cpp
